no need to transition visibility (fixes left transition in firefox)

--- a/kifi-backend/modules/common/public/site/css/main.css
+++ b/kifi-backend/modules/common/public/site/css/main.css
@@ -80,7 +80,7 @@ h3.collection.renaming {background-color: #fff}
 .collection.renaming>a {cursor: text}
 h3.collection>.keep-count {margin-top: 9px}
 .collection.renaming>.keep-count {display: none}
-.coll-tri {position: absolute; top: 0; bottom: 0; left: -27px; width: 33px; background-color: #e3e6ee; text-align: center; cursor: pointer; visibility: hidden; -webkit-transition: left .2s, visibility 0; transition: left .2s, visibility 0}
+.coll-tri {position: absolute; top: 0; bottom: 0; left: -27px; width: 33px; background-color: #e3e6ee; text-align: center; cursor: pointer; visibility: hidden; -webkit-transition: left .2s; transition: left .2s}
 .active>.coll-tri {background-color: #9ba4b8}
 .renaming>.coll-tri {display: none}
 .coll-tri::before {content: " "; border-width: 4px 4px 0; border-style: solid; border-color: #9ba4b8 transparent; font-size: 0; line-height: 0; vertical-align: 1px}
@@ -88,7 +88,6 @@ h3.collection>.keep-count {margin-top: 9px}
 .collection:hover>.coll-tri,
 .collection.with-tri>.coll-tri {visibility: visible}
 .collection.with-tri:not(.no-tri)>.coll-tri {left: 0}
-.collection.with-tri.no-tri>.coll-tri {-webkit-transition-delay: 0, .2s; transition-delay: 0, .2s}
 #coll-menu {display: none; margin: 0; padding: 0; list-style: none; position: absolute; z-index: 1; background: #e3e6ee}
 #coll-menu>li>a {display: block; padding: 0 16px; font-size: 12px; line-height: 24px; white-space: nowrap; color: #556179; border: solid #dbdee3; border-width: 0 1px 1px 0}
 #coll-menu>li>a:hover,
